syntax = "proto3";

option go_package = "genproto/schedule_service";

package schedule_service;

service GroupService {
    rpc Create(CreateGroup) returns (GetGroup) {}
    rpc GetByID(GroupPrimaryKey) returns (GetGroup) {}
    rpc GetByIDTeacher(TeacherID) returns (GetGroup) {}
    rpc GetList(GetListGroupRequest) returns (GetListGroupResponse) {}
    rpc Update(UpdateGroup) returns (GetGroup) {}
    rpc Delete(GroupPrimaryKey) returns (EmptyGroup) {}
}

message EmptyGroup {}

message GroupPrimaryKey {
    string id = 1;
}

message TeacherID {
    string id = 1;
}

message CreateGroup {
    string teacherId = 2;
    string suppportTeacherId = 3;
    string branchId = 4;
    string type = 5;
}

message Group{
    string id = 1;
    string teacherId = 2;
    string suppportTeacherId = 3;
    string branchId = 4;
    string type = 5;
    string created_at = 6;
    string updated_at = 7;
    int32  deleted_at = 8;
}

message UpdateGroup {
    string id = 1;
    string teacherId = 2;
    string suppportTeacherId = 3;
    string branchId = 4;
    string type = 5;
}

message GetGroup{
    string id = 1;
    string teacherId = 2;
    string suppportTeacherId = 3;
    string branchId = 4;
    string type = 5;
    string created_at = 6;
    string updated_at = 7;
    int32  deleted_at = 8;
}

message GetListGroupRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListGroupResponse {
    int64 count = 1;
    repeated Group groups = 2;
}


