syntax = "proto3";

option go_package = "genproto/schedule_service";

package schedule_service;

service StudentTaskService {
    rpc Create(CreateStudentTask) returns (GetStudentTask) {}
    rpc GetByID(StudentTaskPrimaryKey) returns (GetStudentTask) {}
    rpc GetList(GetListStudentTaskRequest) returns (GetListStudentTaskResponse) {}
    rpc Update(UpdateStudentTask) returns (GetStudentTask) {}
    rpc Delete(StudentTaskPrimaryKey) returns (EmptyStudentTask) {}
}

message EmptyStudentTask {}

message StudentTaskPrimaryKey {
    string id = 1;
}

message CreateStudentTask {
    string taskId = 2;
    string studentId = 3;
}

message StudentTask {
    string id = 1;
    string taskId = 2;
    string studentId = 3;
    string created_at = 4;
    string updated_at = 5;
    int32 deleted_at = 6;
}

message GetStudentTask {
    string id = 1;
    string taskId = 2;
    string studentId = 3;
    string created_at = 4;
    string updated_at = 5;
    int32 deleted_at = 6;
}

message UpdateStudentTask {
    string id = 1;
    string taskId = 2;
    string studentId = 3;
}

message GetListStudentTaskRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListStudentTaskResponse {
    int64 count = 1;
    repeated StudentTask studentTasks = 2;
}
