syntax = "proto3";

option go_package = "genproto/user_service";

package user_service;

service BranchService {
    rpc Create(CreateBranch) returns (Branch) {}
    rpc GetByID(BranchPrimaryKey) returns (Branch) {}
    rpc GetList(GetListBranchRequest) returns (GetListBranchResponse) {}
    rpc Update(UpdateBranch) returns (Branch) {}
    rpc Delete(BranchPrimaryKey) returns (EmptyBranch) {}
}

message EmptyBranch{}

message BranchPrimaryKey {
    string id = 1;
}

message CreateBranch {
    string name = 1;
    string address = 2;
    string phone = 3;
}

message Branch {
    string id = 1;
    string name = 2;
    string address = 3;
    string phone = 4;
    string created_at = 5;
    string updated_at = 6;
    int32 deleted_at = 7;
}

message UpdateBranch {
    string id = 1;
    string name = 2;
    string address = 3;
    string phone = 4;
}

message GetBranch {
    string id = 1;
    string name = 2;
    string address = 3;
    string phone = 4;
    string created_at = 5;
    string updated_at = 6;
    int32 deleted_at = 7;
}

message GetListBranchRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListBranchResponse {
    int64 count = 1;
    repeated Branch branches = 2;
}

